KAN-174: Fix mistakes
